# BasicShell

./: CMakeLists.txt
src/: CMakeLists.txt  CommandTable.cpp  CommandTable.h  functions.cpp  functions.h  main.cpp  shell.cpp  shell.h  status.h
tst/: tests.cpp
